# Scarab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  SUPPORT.md  hello.py  pyproject.toml  requirements.txt  test_1.tgz
.github/: copilot-instructions.md
data/examples/: Anuncios.xlsx  (+13 more)
docs/: README.md
install/: README.md  build_release.bat  install_scarab.bat  install_scarab_release_tgz.bat  scarab.tgz  scarab_1-0-0.tgz  update_scarab.bat
src/: cataloguer_config.py  config.json  config_handler.py  data_handler.py  default_config.json  file_handler.py  log_handler.py  log_with_logging.py  metadata_handler.py  scarab.py  spCataloguer.py  teste.py
tests/: 0clean_test.bat  1test_simple_XLSX.bat  2test.bat  2test_update_XLSX.bat  3test_multiple_in_out.bat  4test_overwrite_and_conflict.bat  5test_multiple_keys_variable_columns.bat  6test.bat  6test_heavy_load_missing_data.bat  7test_sch_null_data.bat  8test_special_characters.bat  9test_mixed_metadata.bat  Atest_null_filename_column.bat  Btest_files_and_folders_to_ignore.bat  Ctest_multitable_json.bat  Dtest_multitable_input_single_output.bat  Etest_multitable_CSV.bat  Etest_multitable_csv.tgz  Ftest_update_data.bat  Gtest_monitorSPED.bat  Htest_timestamp.bat  Itest_multitable.bat  Jtest_multitable_update_dim.bat  Ktest_multitable_update_fact.bat  Ltest_multitable_orphan_handling.bat  Mtest_monitorRNI.bat  Ntest_SCH.bat  README.md  clean_test.bat  config.json  test_0.tgz  test_1.bat  test_1.tgz  test_2.tgz  test_3.bat  test_3.tgz  test_4.bat  test_4.tgz  test_5.bat  test_5.tgz  (+18 more)
(+19 files in other folders)
