[project]
name = "scarab"
version = "1.0.0"
description = "Move your shit around"
readme = "https://github.com/InovaFiscaliza/Scarab/blob/main/README.md"
requires-python = ">=3.13"
dependencies = [
    "base58>=2.1.1",
    "charset-normalizer>=3.4.3",
    "coloredlogs>=15.0.1",
    "logging>=0.4.9.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]
